<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rakshak.vaahan.ui.home.HomeFragment"
        android:label="Vaahan Rakshak"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_addCar"
        android:name="com.rakshak.vaahan.ui.reflow.AddCar"
        android:label="@string/menu_addC"
        tools:layout="@layout/add_cars" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.rakshak.vaahan.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rakshak.vaahan.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>