<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.home.HomeFragment">

    <Spinner
        android:id="@+id/carListShow"
        style="@style/sauber"
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/select_car"
        android:textSize="30sp"
        android:background="@drawable/round_bg"
        android:contentDescription="@string/carList"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/driveBtn"
        style="@style/sauber"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:background="@drawable/round_bg"
        android:contentDescription="@string/drivestatus"
        android:text="Driving  "
        android:textSize="30sp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/drvStatus"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:textSize="30sp"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="280dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_bg">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_bg"
            style="@style/onSauber"
            android:src="@raw/bengaluru"/>

    </androidx.cardview.widget.CardView>



</FrameLayout>